maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:51: error: type mismatch;
 found   : (Int, Int)
 required: Int
    setIndication(0,0,nextCase(0))
                              ^